--- a/src/components/titlebar/titlebar.module.css
+++ b/src/components/titlebar/titlebar.module.css
@@ -1,6 +1,5 @@
 .titlebar {
-  height: 30px;
-  background: #329ea3;
+  height: 40px;
   -webkit-user-select: none;
   user-select: none;
   display: flex;
@@ -9,6 +8,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 50;
 }
 .titlebar-button {
   display: inline-flex;
@@ -16,7 +16,4 @@
   align-items: center;
   width: 30px;
   height: 30px;
-}
-.titlebar-button:hover {
-  background: #5bbec3;
 }
